--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="medium_green">#689c9f</color>
+    <color name="light_green">#9CD1D5</color>
     <color name="dark_green">#317578</color>
     <color name="orange">#ce8b74</color>
 </resources>
