--- a/app/src/main/res/layout/activity_guild.xml
+++ b/app/src/main/res/layout/activity_guild.xml
@@ -26,10 +26,10 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/rounded_rectangle_dark"
         android:fillViewport="true"
         android:orientation="vertical">
@@ -116,20 +116,20 @@
     </LinearLayout>
     <RelativeLayout
         android:id="@+id/textset"
-        android:layout_width="180dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/rounded_rectangle">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
             android:text="Guild"
             android:textSize="30sp"
             android:fontFamily="@font/opensansbold"
             android:textAlignment="center"
-            android:padding="5dp"
+            android:padding="10dp"
             android:textColor="@color/white"
             tools:ignore="HardcodedText" />
 
