--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -17,10 +17,10 @@
         android:layout_height="match_parent"
         android:fillViewport="true"
         android:background="@drawable/rounded_rectangle_dark"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp">
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -156,17 +156,17 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/rounded_rectangle">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
             android:text="Settings"
             android:textSize="30sp"
             android:fontFamily="@font/opensansbold"
             android:textAlignment="center"
-            android:padding="5dp"
+            android:padding="10dp"
             android:textColor="@color/white"
             tools:ignore="HardcodedText" />
 
@@ -181,9 +181,10 @@
         app:itemTextColor="@color/white"
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_navigation_menu"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="20dp"
         app:labelVisibilityMode="unlabeled"/>
 
 </RelativeLayout>
